# flickt-anchor

./: Anchor.toml
programs/account-creator/: Cargo.toml
programs/account-creator/src/: lib.rs
programs/govern-token/: Cargo.toml
programs/govern-token/src/: lib.rs
programs/post-creator/: Cargo.toml
programs/post-creator/src/: lib.rs
programs/social-token/: Cargo.toml
programs/social-token/src/: lib.rs
tests/: flickt.ts
